--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,5 +28,6 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
     compile project(':promptlibrary')
+    compile 'com.github.bumptech.glide:glide:3.6.1'
 //    compile 'com.github.limxing:Android-PromptDialog:1.0.0'
 }
