--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,5 +29,6 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile project(':promptlibrary')
     compile 'com.github.bumptech.glide:glide:3.6.1'
-//    compile 'com.github.limxing:Android-PromptDialog:1.0.0'
+    //    compile 'com.github.limxing:Android-PromptDialog:1.0.0'
+    compile files('libs/MapSDK_fat.jar')
 }
